--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=7.4",
         "omegacode/jwt-secured-api-core": "0.6.*",
         "omegacode/jwt-secured-api-graphql": "0.2.*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
@@ -29,7 +30,6 @@
         }
     },
     "config": {
-        "bin-dir": "bin",
         "platform": {
             "php": "7.4"
         },
@@ -41,6 +41,9 @@
         ],
         "lint": [
             "./.ci/scripts/ciRunner.sh -s lint"
+        ],
+        "php-fix": [
+            "./.ci/scripts/ciRunner.sh -s php-fix"
         ],
         "build": [
             "./.ci/scripts/ciRunner.sh -s build"
