Add deployment test #1

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,9 @@ script:
   - >
     echo "Running unit tests";
     .ci/scripts/ciRunner.sh -s unit -p $TRAVIS_PHP_VERSION
+
+deploy:
+  - provider: script
+    script: bash .ci/deploy.sh
+    on:
+      branch: master
