Add deployment test #6

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ script:
 
 deploy:
   - provider: script
+    skip_cleanup: true
     script: bash .ci/deploy.sh
     on:
       branch: feature/add-deployment
