--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,13 @@ script:
 addons:
   ssh_known_hosts: 'lupus-code.it'
 
+before_deploy:
+  - echo "Login to server:"
+  - which ssh-agent || ( apk --no-cache add openssh-client )
+  - eval "$(ssh-agent -s)"
+  - SSH_PRIVATE_KEY=$(echo "$SSH_PRIVATE_KEY" | base64 -d)
+  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+
 deploy:
   - provider: script
     cleanup: true
