--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,7 @@ before_deploy:
   - echo "Login to server:"
   - which ssh-agent || ( apk --no-cache add openssh-client )
   - eval "$(ssh-agent -s)"
-  - SSH_PRIVATE_KEY=$(echo "$SSH_PRIVATE_KEY" | base64 -d)
-  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+  - echo "$SSH_PRIVATE_KEY" | base64 -d | tr -d '\r' | ssh-add - > /dev/null
 
 deploy:
   - provider: script
