--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,9 @@ before_deploy:
   - echo "Login to server:"
   - which ssh-agent || ( apk --no-cache add openssh-client )
   - eval "$(ssh-agent -s)"
-  - echo "$SSH_PRIVATE_KEY" | base64 -d | tr -d '\r' | ssh-add - > /dev/null
+  - echo "$SSH_PRIVATE_KEY" | base64 -d >> /tmp/deploy_rsa
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
 
 deploy:
   - provider: script
