Add deployment test #15

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,19 @@ language: php
 php:
   - 7.4
 
+cache:
+  directories:
+    - $HOME/.composer/cache
+
 notifications:
   email:
     recipients:
       - wpu@hotmail.de
     on_success: change
     on_failure: change
+
+before_script:
+  - .ci/scripts/ciRunner.sh -s build -p $TRAVIS_PHP_VERSION
 
 addons:
   ssh_known_hosts: 'lupus-code.it'
