--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,31 @@
 language: php
-
 php:
   - 7.4
-
 cache:
   directories:
-    - $HOME/.composer/cache
-
+    - "$HOME/.composer/cache"
 notifications:
   email:
     recipients:
       - wpu@hotmail.de
     on_success: change
     on_failure: change
-
 before_script:
-  - .ci/scripts/ciRunner.sh -s build -p $TRAVIS_PHP_VERSION
-
+  - ".ci/scripts/ciRunner.sh -s build -p $TRAVIS_PHP_VERSION"
 addons:
-  ssh_known_hosts: 'lupus-code.it'
-
+  ssh_known_hosts: lupus-code.it
 before_deploy:
-  - echo "Login to server:"
   - which ssh-agent || ( apk --no-cache add openssh-client )
   - eval "$(ssh-agent -s)"
-  - echo "$SSH_PRIVATE_KEY" >> /tmp/deploy_rsa
-  - chmod 600 /tmp/deploy_rsa
-  - ssh-add /tmp/deploy_rsa
-
+  - chmod 600 .ci/travis/id_rsa
+  - ssh-add .ci/travis/id_rsa
 deploy:
-  - provider: script
+  -
+    provider: script
     cleanup: true
     script: bash .ci/scripts/deploy.sh
     on:
       branch: feature/add-deployment
+before_install:
+  - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv
+    -in .ci/travis/id_rsa.enc -out .ci/travis/id_rsa -d
