--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: php
 php:
-  - 7.4
+- 7.4
 cache:
   directories:
-    - "$HOME/.composer/cache"
+  - "$HOME/.composer/cache"
 notifications:
   email:
     recipients:
-      - wpu@hotmail.de
+    - wpu@hotmail.de
     on_success: change
     on_failure: change
 before_script:
@@ -15,17 +15,14 @@ before_script:
 addons:
   ssh_known_hosts: lupus-code.it
 before_deploy:
+  - openssl aes-256-cbc -K $encrypted_db2095f63ba3_key -iv $encrypted_db2095f63ba3_iv -in deploy_rsa.enc -out /tmp/deploy_rsa -d
   - which ssh-agent || ( apk --no-cache add openssh-client )
   - eval "$(ssh-agent -s)"
-  - chmod 600 .ci/travis/id_rsa
-  - ssh-add .ci/travis/id_rsa
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
 deploy:
-  -
-    provider: script
-    cleanup: true
-    script: bash .ci/scripts/deploy.sh
-    on:
-      branch: feature/add-deployment
-before_install:
-  - openssl aes-256-cbc -K $encrypted_f217180e22ee_key -iv $encrypted_f217180e22ee_iv
-    -in .ci/travis/id_rsa.enc -out .ci/travis/id_rsa -d
+- provider: script
+  cleanup: true
+  script: bash .ci/scripts/deploy.sh
+  on:
+    branch: feature/add-deployment
