--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_deploy:
   - openssl aes-256-cbc -K $encrypted_db2095f63ba3_key -iv $encrypted_db2095f63ba3_iv -in deploy_rsa.enc -out deploy_rsa -d
   - which ssh-agent || ( apk --no-cache add openssh-client )
   - eval "$(ssh-agent -s)"
+  - chmod 600 deploy_rsa
   - ssh-add deploy_rsa
 deploy:
   -
