--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpstan/phpstan": "0.12.*",
         "phpmd/phpmd": "^2.8",
-        "kint-php/kint": "^3.3"
+        "kint-php/kint": "^3.3",
+        "deployer/deployer": "^6.8"
     },
     "autoload": {
         "psr-4": {
