--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_deploy:
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
+- composer global require -q --dev deployer/deployer:~6.4 deployphp/recipes:~6.2
+- ls -la "$HOME/.composer/vendor/bin
 deploy:
 - provider: script
   skip_cleanup: true
