--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ php:
 - 7.4
 cache:
   directories:
-  - "$HOME/.composer/cache"
+  - $HOME/.cache/composer/files
 notifications:
   email:
     recipients:
@@ -20,7 +20,7 @@ before_deploy:
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
 - composer global require -q --dev deployer/deployer:~6.4 deployphp/recipes:~6.2
-- ls -la "$HOME/.composer/vendor/bin"
+- ls -la "$HOME/.config/composer/vendor/bin
 deploy:
 - provider: script
   skip_cleanup: true
