--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_deploy:
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
 - composer global require -q --dev deployer/deployer:~6.4 deployphp/recipes:~6.2
-- ls -la "$HOME/.config/composer/vendor/bin
+- ls -la "$HOME/.config/composer/vendor/bin"
 deploy:
 - provider: script
   skip_cleanup: true
