--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,14 @@ before_script:
 addons:
   ssh_known_hosts: lupus-code.it
 before_deploy:
+- composer global require -q --dev deployer/deployer:~6.4 deployphp/recipes:~6.2
 - openssl aes-256-cbc -K $encrypted_db2095f63ba3_key -iv $encrypted_db2095f63ba3_iv -in .ci/travis/deploy_rsa.enc -out /tmp/deploy_rsa -d
 - eval "$(ssh-agent -s)"
 - chmod 600 /tmp/deploy_rsa
 - ssh-add /tmp/deploy_rsa
-- composer global require -q --dev deployer/deployer:~6.4 deployphp/recipes:~6.2
-- ls -la "$HOME/.config/composer/vendor/bin"
 deploy:
 - provider: script
   skip_cleanup: true
-  script: vendor/bin/dep -f./.ci/deploy.php deploy production
+  script: "$HOME"/.config/composer/vendor/bin -f./.ci/deploy.php deploy production
   on:
     branch: feature/add-deployment
