--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,29 @@
 language: php
 php:
-- 7.4
+  - 7.4
 cache:
   directories:
-  - $HOME/.cache/composer/files
+    - $HOME/.cache/composer/files
 notifications:
   email:
     recipients:
-    - wpu@hotmail.de
+      - wpu@hotmail.de
     on_success: change
     on_failure: change
 before_script:
-- composer install
+  - composer install
 addons:
   ssh_known_hosts: lupus-code.it
 before_deploy:
-- composer global require -q --dev deployer/deployer:~6.4 deployphp/recipes:~6.2
-- openssl aes-256-cbc -K $encrypted_db2095f63ba3_key -iv $encrypted_db2095f63ba3_iv -in .ci/travis/deploy_rsa.enc -out /tmp/deploy_rsa -d
-- eval "$(ssh-agent -s)"
-- chmod 600 /tmp/deploy_rsa
-- ssh-add /tmp/deploy_rsa
+  - composer global require -q --dev deployer/deployer:~6.4 deployphp/recipes:~6.2
+  - openssl aes-256-cbc -K $encrypted_db2095f63ba3_key -iv $encrypted_db2095f63ba3_iv -in .ci/travis/deploy_rsa.enc -out /tmp/deploy_rsa -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
 deploy:
-- provider: script
-  skip_cleanup: true
-  script: "$HOME"/.config/composer/vendor/bin -f./.ci/deploy.php deploy production
-  on:
-    branch: feature/add-deployment
+  -
+    provider: script
+    skip_cleanup: true
+    script: $HOME/.config/composer/vendor/bin -f./.ci/deploy.php deploy production
+    on:
+      branch: feature/add-deployment
