Add deployment test #32

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ deploy:
   -
     provider: script
     skip_cleanup: true
-    script: .ci/scripts/deploy.sh
+    script: bash .ci/scripts/deploy.sh
     on:
       branch: feature/add-deployment
