Add deployment test #35

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,18 @@ notifications:
     on_failure: change
 before_script:
   - composer install
+script:
+  - >
+    echo "Running code quality tests";
+    .ci/scripts/ciRunner.sh -s quality -p $TRAVIS_PHP_VERSION
+
+  - >
+    echo "Running unit tests";
+    .ci/scripts/ciRunner.sh -s unit -p $TRAVIS_PHP_VERSION
+
+  - >
+    echo "Running end to end tests";
+    .ci/scripts/ciRunner.sh -s e2e -p $TRAVIS_PHP_VERSION
 addons:
   ssh_known_hosts: lupus-code.it
 before_deploy:
